# rustvid

./: .gitignore  .rustfmt.toml  4-AGENT-SWARM-VISUAL-PROOF.txt  Cargo.toml  FINAL_PROJECT_STATUS.md  HIVE_MIND_GUIDE.md  HIVE_MIND_PRACTICAL_EXAMPLE.md  HIVE_MIND_QUICK_START.sh  HIVE_MIND_TEST_AUTOMATION_CONFIG.md  IMPLEMENTATION_STATUS.md  Makefile  PROJECT_COMPLETION_STATUS_100.md  QUICK_RUN_GUIDE.md  README.md  README_BUILD_DEPS.md  RELEASE_GUIDE.md  RELEASE_NOTES_TEMPLATE.md  TESTING_STATUS.md  TEST_PROOF.md  ULTIMATE_HIVE_MIND_TEST_CONFIG.md  fix-demo.sh  hardware-check-20250725-114509.txt  quick-start.sh  run-simple-test.sh  tauri.conf.web.json  test-fix-loop.sh  test-results-summary.md
.github/workflows/: ci.yml  comprehensive-tests.yml  release.yml  test.yml
.hive-mind/: config.json  hive.db  hive.db-shm  hive.db-wal
.hive-mind/sessions/: hive-mind-prompt-swarm-1753388004299-xm1vglixi.txt  hive-mind-prompt-swarm-1753446329397-c7cndqzor.txt  hive-mind-prompt-swarm-1753448814692-59jidi0aa.txt  session-1753387870307-f6303y6fv-auto-save-1753387900308.json  session-1753388004300-dwlvi30n0-auto-save-1753388034303.json  session-1753446329400-8nd2bgqoc-auto-save-1753446359401.json  session-1753448814696-0cct7m85z-auto-save-1753448844697.json
.swarm/: memory.db
crates/core/: Cargo.toml
crates/core/benches/: buffer_benchmarks.rs  frame_benchmarks.rs
crates/core/examples/: video_engine_demo.rs
crates/core/src/: error.rs  frame.rs  lib.rs  traits.rs
crates/core/src/buffer/: README.md  cache.rs  mod.rs  pool.rs  tests.rs
crates/core/src/decoder/: ffmpeg.rs  mod.rs  tests.rs
crates/core/src/frame/: tests.rs
crates/core/src/pipeline/: mod.rs
crates/effects/: Cargo.toml  README.md
crates/effects/.swarm/: memory.db
crates/effects/benches/: effects_benchmark.rs
crates/effects/examples/: basic_pipeline.rs
crates/effects/src/: effects.rs  error.rs  filters.rs  gpu.rs  lib.rs  parameters.rs  pipeline.rs  shaders.rs  traits.rs  transitions.rs
crates/effects/src/effects/: blur.rs  brightness_contrast.rs  color_correction.rs
crates/effects/src/shaders/: blur.rs  brightness_contrast.rs  color_correction.rs  transitions.rs
crates/effects/src/transitions/: dissolve.rs  fade.rs  wipe.rs
crates/effects/tests/: effect_tests.rs  integration_tests.rs
crates/export/: Cargo.toml  README.md
crates/export/examples/: export_demo.rs
crates/export/src/: encoder.rs  job.rs  lib.rs  pipeline.rs  presets.rs
crates/timeline/: Cargo.toml
crates/timeline/src/: lib.rs
crates/timeline/tests/: timeline_tests.rs
crates/ui/: Cargo.toml  tauri.conf.json
crates/ui/src/: lib.rs  main.rs
crates/ui/ui/: index.html  package.json  vite.config.ts
crates/ui/ui/src/: App.css  App.tsx  styles.css
crates/ui/ui/src/components/: ControlPanel.css  ControlPanel.tsx  VideoTimeline.css  VideoTimeline.tsx
demo-site/: README.md  editor.html  index.html  serve.py
demo-site/css/: animations.css  editor.css  styles.css
demo-site/js/: animations.js  editor.js  error-handler.js  main.js
distribution/: README.md
distribution/chocolatey/: rust-video-editor.nuspec
distribution/chocolatey/tools/: chocolateyinstall.ps1
distribution/docs/: DISTRIBUTION.md  download-page-template.html  io.github.rust_video_editor.appdata.xml
distribution/flatpak/: io.github.rust_video_editor.yaml
distribution/homebrew/: rust-video-editor.rb
distribution/scripts/: verify-install.ps1  verify-install.sh
distribution/snap/: snapcraft.yaml
distribution/winget/: rust-video-editor.yaml
docs/: HARDWARE_REQUIREMENTS.md  QUICK_START.md  README.md  USER_MANUAL.md
docs/api/: index.md
docs/architecture/: overview.md
docs/guides/: developer-guide.md  user-guide.md
docs/plugins/: plugin-guide.md
docs/tutorials/: 01-installation-tutorial.md  02-basic-editing-tutorial.md  03-effects-transitions-tutorial.md  04-export-settings-tutorial.md  05-advanced-features-tutorial.md  tutorial-recording-guide.md
examples/: basic_video_editing.rs  buffer_demo.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/.swarm/: memory.db
frontend/src/: App.css  App.tsx
frontend/src/__tests__/: accessibility.test.tsx
frontend/src/components/: AccessibilityMenu.tsx  ErrorBoundary.tsx  LoadingSpinner.tsx
frontend/src/components/timeline/: Timeline.tsx  TimelineClip.tsx  TimelineControls.tsx  TimelineRuler.tsx  TimelineTrack.tsx  index.ts
frontend/src/config/: ariaLabels.ts  keyboardShortcuts.json
frontend/src/hooks/: useDragAndDrop.ts  useKeyboardShortcuts.ts  useZoomPan.ts
frontend/src/store/: timelineStore.ts
frontend/src/utils/: accessibility.ts  focusManager.ts  keyboard.ts
scripts/: auto-debug-collector.sh  auto-updater-config.json  build-all.sh  build-linux.sh  build-macos.sh  build-windows.ps1  check-hardware.sh  comprehensive-test-demo.sh  generate-update-manifest.sh  sign-code.sh
test-proof-20250725-142348/: system-info.txt  test-summary.txt
tests/: generate_test_report.py  integration_tests.rs  lib.rs  run_all_tests.ps1  run_all_tests.sh
tests/fixtures/: create_test_videos.py
tests/helpers/: accessibility.rs  fixtures.rs  memory.rs  mod.rs  performance.rs  platform.rs
tests/performance/: benchmark_suite.rs
tests/unit/: buffer_tests.rs  frame_tests.rs
web/: index.html  manifest.json
web/assets/js/: compat-shims.js
web/config/: cdn-config.json  performance-config.js  wasm-pack.toml
web/scripts/: build-wasm.sh  deploy-cloudflare.sh  deploy-netlify.sh  deploy-vercel.sh
web/worker/: service-worker.js
