[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/timeline",
    "crates/effects",
    "crates/ui",
    "crates/export",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rust Video Editor Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/rust-video-editor"
homepage = "https://github.com/your-org/rust-video-editor"
keywords = ["video", "editor", "multimedia", "vfx", "timeline"]
categories = ["multimedia", "multimedia::video"]

[workspace.dependencies]
# Core dependencies - will be refined based on framework recommendations
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Video processing - to be finalized after framework selection
# gstreamer = "0.23"
# ffmpeg-next = "7.0"

# UI framework - to be determined
# egui = "0.28"
# iced = "0.13"
# tauri = "2.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
debug = true