[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/timeline",
    "crates/effects",
    "crates/ui",
    "crates/export",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rust Video Editor Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/rust-video-editor"
homepage = "https://github.com/your-org/rust-video-editor"
keywords = ["video", "editor", "multimedia", "vfx", "timeline"]
categories = ["multimedia", "multimedia::video"]

[workspace.dependencies]
# Core dependencies - will be refined based on framework recommendations
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Video processing
ffmpeg-next = "6.0"
ffmpeg-sys-next = "6.0"
image = "0.24"
rayon = "1.7"
crossbeam-channel = "0.5"

# UI framework
tauri = "2.0"

# Testing dependencies
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
mockall = "0.11"
tempfile = "3.0"
rstest = "0.18"
serial_test = "3.0"
pretty_assertions = "1.3"
test-case = "3.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
debug = true