[package]
name = "video-editor-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core video processing engine for Rust Video Editor"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Video processing dependencies to be added after framework selection
# Examples:
# gstreamer = { version = "0.23", optional = true }
# ffmpeg-next = { version = "7.0", optional = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[features]
default = []
# gstreamer-backend = ["gstreamer", "gstreamer-video", "gstreamer-audio"]
# ffmpeg-backend = ["ffmpeg-next"]