[package]
name = "video-editor-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core video processing engine for Rust Video Editor"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Video processing dependencies
ffmpeg-next = { workspace = true, features = ["build"], optional = true }
ffmpeg-sys-next = { workspace = true, features = ["build"], optional = true }

# Image processing
image = { workspace = true }

# Parallel processing
rayon = { workspace = true }

# Channel for frame queues
crossbeam-channel = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
mockall = { workspace = true }
rstest = { workspace = true }
serial_test = { workspace = true }
pretty_assertions = { workspace = true }
test-case = { workspace = true }

[features]
default = ["ffmpeg-backend"]
ffmpeg-backend = ["ffmpeg-next", "ffmpeg-sys-next"]
# gstreamer-backend = ["gstreamer", "gstreamer-video", "gstreamer-audio"]
integration-tests = []

[[bench]]
name = "frame_benchmarks"
harness = false

[[bench]]
name = "buffer_benchmarks"
harness = false