[package]
name = "video-editor-effects"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Effects and filters for Rust Video Editor"

[dependencies]
# Core dependencies
video-editor-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
image = { workspace = true }

# GPU acceleration
wgpu = "0.19"
bytemuck = { version = "1.14", features = ["derive"] }

# Math and image processing
glam = "0.25"
futures = "0.3"

# UUID for effect IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# For shader hot-reloading in development
notify = { version = "6.1", optional = true }

[dev-dependencies]
criterion = { workspace = true }
pretty_assertions = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
hot-reload = ["notify"]

[[bench]]
name = "effects_benchmark"
harness = false