[package]
name = "video-editor-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "User interface for Rust Video Editor"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
video-editor-core = { path = "../core" }
video-editor-timeline = { path = "../timeline" }
video-editor-effects = { path = "../effects" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tauri = { workspace = true, features = [] }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]